feat: ssh key support (#5)
* feat: ssh key support
* fix: generate the SSH model
